[INFRASTRUCTURE](Restrucutring)Cleaned project

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -27,11 +27,11 @@
     <tr th:if="${leds.isEmpty()}">
         <td colspan="2"> No items Available</td>
     </tr>
-    <tr scope="row" th:each="book : ${leds}">
-        <td><span th:text="${book.name}"> Name </span></td>
-        <td><span th:text="${book.name}"> Description </span></td>
-        <td><span th:text="${book.state}"> analyses </span></td>
-    </tr>
+    <!--<tr scope="row" th:each="book : ${leds}">-->
+        <!--<td><span th:text="${book.name}"> Name </span></td>-->
+        <!--<td><span th:text="${book.name}"> Description </span></td>-->
+        <!--<td><span th:text="${book.activated}"> analyses </span></td>-->
+    <!--</tr>-->
     </tbody>
 </table>
 
