(Frontend)Added and implemented overlaymodal

--- a/src/main/frontend/src/views/Schema/SchemaView.css
+++ b/src/main/frontend/src/views/Schema/SchemaView.css
@@ -1,7 +1,7 @@
-.schemaview button {
+.schemaview .hoverbutton {
     visibility: hidden;
 }
 
-.schemaview:hover button {
+.schemaview:hover .hoverbutton {
     visibility: visible;
 }
