--- a/src/main/frontend/src/views/Schema/SchemaView.css
+++ b/src/main/frontend/src/views/Schema/SchemaView.css
@@ -5,3 +5,12 @@
 .schemaview:hover .hoverbutton {
     visibility: visible;
 }
+
+.h1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.schemaview > td {
+    vertical-align: middle;
+}
