--- a/src/main/resources/templates/redirect.html
+++ b/src/main/resources/templates/redirect.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>HeizungsPi</title>
+    <name>HeizungsPi</name>
     <meta http-equiv="refresh" content="0; url=/"/>
 </head>
 </html>
