--- a/src/main/frontend/src/views/Schema/SchemaView.css
+++ b/src/main/frontend/src/views/Schema/SchemaView.css
@@ -17,13 +17,20 @@
 
 
 .radius-left {
-    border-radius: 0!important;
-    border-top-left-radius: 4px!important;
-    border-bottom-left-radius: 4px!important;
+    border-radius: 0 !important;
+    border-top-left-radius: 4px !important;
+    border-bottom-left-radius: 4px !important;
 }
 
 .radius-right {
-    border-radius: 0!important;
-    border-top-right-radius: 4px!important;
-    border-bottom-right-radius: 4px!important;
+    border-radius: 0 !important;
+    border-top-right-radius: 4px !important;
+    border-bottom-right-radius: 4px !important;
+}
+
+@media screen and (max-width: 600px) {
+    .schemaview .hoverbutton {
+        visibility: visible;
+    }
+
 }
