--- a/src/main/frontend/src/views/Login/Login.css
+++ b/src/main/frontend/src/views/Login/Login.css
@@ -1,8 +1,5 @@
 #LoginForm {
-    background-image: url("https://hdwallsource.com/img/2014/9/blur-26347-27038-hd-wallpapers.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-image: linear-gradient(-30deg, #f794a4 0%, #576076 100%);
     padding: 10px;
     height: 100vh;
 }
@@ -31,6 +28,7 @@
     margin: 10px auto 30px;
     max-width: 38%;
     padding: 50px 70px 70px 71px;
+    opacity: 0.8;
 }
 
 .login-form .form-group {
