--- a/src/main/frontend/src/components/label/editable/EditableLabel.module.css
+++ b/src/main/frontend/src/components/label/editable/EditableLabel.module.css
@@ -3,6 +3,9 @@
     border: none;
     background: transparent;
     color: black;
+    resize: none;
+    overflow: hidden;
+    min-height: 50px;
 }
 
 
