--- a/src/main/frontend/src/views/Dashboard/Dashboard.module.css
+++ b/src/main/frontend/src/views/Dashboard/Dashboard.module.css
@@ -2,6 +2,7 @@
     color: gray;
     width: 100%;
     font-size: 25px;
+    margin-top: 20px;
     text-align: center;
     font-family: initial;
 }
@@ -10,4 +11,8 @@
     font-size: 40px;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+.names{
+    font-size: 20px;
 }
