[FRONTEND]Added temperature dashboard; Fixed toasts; Fixed dashboard;
Took 15 minutes

--- a/frontend/views/Dashboard/Dashboard.module.css
+++ b/frontend/views/Dashboard/Dashboard.module.css
@@ -7,10 +7,8 @@
     font-family: initial;
 }
 
-.schemaHeading {
-    font-size: 40px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+.textSize{
+    font-size: 22px;
 }
 
 
